clusters/beryjuio-prod/registry/standalone-token/deployment.yaml
# prettier-ignore
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: standalone-registry-token
  name: standalone-registry-token
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: standalone-registry-token
  template:
    metadata:
      labels:
        app.kubernetes.io/name: standalone-registry-token
    spec:
      containers:
      - image: ghcr.io/beryju/distribution-oauth:latest-1724317546-0011cf52890404939abae1a15c0023a8447a7864 # {"$imagepolicy": "flux-system:registry-token"}
        name: token-svc
        resources:
          requests:
            memory: 100M
            cpu: 50m
          limits:
            memory: 300M
            cpu: 100m
        ports:
        - containerPort: 9001
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /live
            port: 9001
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            path: /live
            port: 9001
          initialDelaySeconds: 5
